--- a/security-cards.css
+++ b/security-cards.css
@@ -300,8 +300,8 @@
     .mobile-security-layout {
         display: block !important;
         padding: 0;
-        padding-bottom: 100px;
-        /* Ensure bottom scrolling space */
+        padding-bottom: 40px;
+        /* Reduced from 100px */
     }
 
     /* Hide the large "Security Settings" title on mobile to save space */
